crates/solidity-v2/testing/snapshots/diagnostics_output/structure/free_function_without_body/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 4668] Error: Free functions must be implemented.
   ╭─[input.sol:5:1]
   │
 5 │ function f1() returns (uint);
   │ ──────────────┬──────────────  
   │               ╰──────────────── Error occurred here.
───╯
